Revision history for {{$dist->name}}

{{$NEXT}}

0.021     2015-02-15 22:51:47Z
          - new 'also_disallow' option, for prohibiting some core modules

0.020     2015-01-03 20:57:36Z
          - re-release to fix problematic $VERSION declaration (RT#101095)

0.019     2014-12-18 06:44:28Z
          - fixed bad parsing of response from cpanmetadb, which resulted in
            invalid failures for dual-life upstream-blead modules when
            check_dual_life_versions = 0

0.018     2014-11-22 04:02:17Z
          - switch from cpanidx to cpanmetadb index

0.017     2014-08-06 05:39:32Z
          - re-release to remove README.pod from shipped dist

0.016     2014-08-01 02:13:32Z
          - fix fatal error when [MetaConfig] is used and starting_version is
            not specified (from 0.015)

0.015     2014-08-01 01:01:20Z
          - fix fatal error when used in conjunction with [MetaConfig]
            (introduced in 0.014)

0.014     2014-07-20 15:35:18Z
          - 'starting_version' now defaults to the perl prerequisite declared
            in the distribution, if it exists

0.013     2013-12-14 21:09:08Z
          - now treats dual-lifed modules that did not exist in core at all at
            the versions being checked against as the same as existing, but
            not being at a new enough version (relevant when
            check_dual_life_versions = 0)

0.012     2013-12-02 04:54:15Z
          - now also checking configure and build prereqs by default
          (RT#91081)
          - new "skip" option

0.011     2013-11-30 17:29:54Z
          - re-release to fix compile test

0.010     2013-11-11 17:02:47Z (TRIAL RELEASE)
          - fix expected string in tests for pre-5.019 perls

0.009     2013-11-10 19:40:18Z (TRIAL RELEASE)
          - more diagnostics printed in failing tests

0.008     2013-09-19 03:29:22Z
          - fix issues with check_dual_life_version feature
          - remove "check_module_versions" option
