@@ -116,7 +116,9 @@ around dump_config => sub
     $config->{+__PACKAGE__} = {
         ( map { $_ => [ $self->$_ ] } qw(phases skips also_disallow)),
         ( map { $_ => $self->$_ } qw(deprecated_ok check_dual_life_versions)),
-        ( starting_version => ($self->_has_starting_version ? $self->starting_version : 'to be determined from perl prereq')),
+        ( starting_version => ($self->_has_starting_version
+                ? $self->starting_version->numify
+                : 'to be determined from perl prereq')),
     };
 
     return $config;
